Added teaser text to the home page

--- a/annotations.html
+++ b/annotations.html
@@ -318,8 +318,8 @@
     <span class="o">}</span>
 
     <span class="nd">@Override</span>
-    <span class="kd">public</span> <span class="n">String</span> <span class="nf">infoOnType</span><span class="o">()</span> <span class="o">{</span>
-        <span class="k">return</span> <span class="nf">getType</span><span class="o">(</span><span class="n">Charset</span><span class="o">.</span><span class="na">class</span><span class="o">);</span>
+    <span class="kd">public</span> <span class="n">Class</span> <span class="nf">getType</span><span class="o">()</span> <span class="o">{</span>
+        <span class="k">return</span> <span class="n">BeanSimple</span><span class="o">.</span><span class="na">class</span><span class="o">;</span>
     <span class="o">}</span>
 
 <span class="o">}</span>
