'Solved' the Spring issue in the documentation

--- a/architecture.html
+++ b/architecture.html
@@ -75,7 +75,7 @@
                     <strong>column index mapping</strong>; used by default, executed by the ColumnIndexMapper. Maps found cells to Bean properties by their index of the column in the CSV file. </li>
                 <li>
                     <strong>column name mapping</strong>; executed by the ColumnNameMapper. Maps found cells to Bean properties by the header name of the column in the CSV file.</li>
-            </ul><p>All mappable cells are converted to the Bean property using <a href="http://docs.oracle.com/javase/6/docs/api/java/beans/PropertyEditor.html">PropertyEditors</a>. Custom PropertyEditors can be used as well.</p>
+            </ul><p>All mappable cells are converted to the Bean property using Converters. Custom Converters can be configured as well.</p>
 
             <h2 id="row">row</h2>
 
