Added release notes to documentation

--- a/comparison-matrix.html
+++ b/comparison-matrix.html
@@ -47,7 +47,7 @@
 
         <p class="site-link"><a href="index.html">&lt;&lt; Home</a></p>
 
-        <h1>Comparison Matrix</h1>
+        <h1>Comparison matrix</h1>
 
         <h2>Repository</h2>
 
