--- a/design-choices.html
+++ b/design-choices.html
@@ -45,7 +45,7 @@
     <div class="inner clearfix">
         <section id="main-content">
 
-            <h1>Design Choices</h1>
+            <h1>Design choices</h1>
 
             <ul>
                 <li><a href="#tokenizer">Tokenizer</a>; why build the tokenizer the way you did?</li>
@@ -158,11 +158,13 @@
             <p class="site-link">Manual</p>
             <p class="site-link-sub"><a href="annotations.html">Annotations</a></p>
             <p class="site-link-sub"><a href="api.html">API</a></p>
+            <p class="site-link">Roadmap</p>
+            <p class="site-link-sub"><a href="release-notes.html">Release notes</a></p>
             <p class="site-link">Background</p>
             <p class="site-link-sub"><a href="architecture.html">Architecture</a></p>
-            <p class="site-link-sub"><a href="design-choices.html">Design Choices</a></p>
+            <p class="site-link-sub"><a href="design-choices.html">Design choices</a></p>
             <p class="site-link-sub"><a href="comparison.html">Comparison</a></p>
-            <p class="site-link-sub2"><a href="comparison-matrix.html">Comparison Matrix</a></p>
+            <p class="site-link-sub2"><a href="comparison-matrix.html">Comparison matrix</a></p>
             <p class="site-link-sub"><a href="rfc4180.html">RFC 4180</a></p>
 
             <hr>
