--- a/index.html
+++ b/index.html
@@ -174,11 +174,13 @@ CSV text value into a java.util.Date using the date format in the annotation.</p
             <p class="site-link">Manual</p>
             <p class="site-link-sub"><a href="annotations.html">Annotations</a></p>
             <p class="site-link-sub"><a href="api.html">API</a></p>
+            <p class="site-link">Roadmap</p>
+            <p class="site-link-sub"><a href="release-notes.html">Release notes</a></p>
             <p class="site-link">Background</p>
             <p class="site-link-sub"><a href="architecture.html">Architecture</a></p>
-            <p class="site-link-sub"><a href="design-choices.html">Design Choices</a></p>
+            <p class="site-link-sub"><a href="design-choices.html">Design choices</a></p>
             <p class="site-link-sub"><a href="comparison.html">Comparison</a></p>
-            <p class="site-link-sub2"><a href="comparison-matrix.html">Comparison Matrix</a></p>
+            <p class="site-link-sub2"><a href="comparison-matrix.html">Comparison matrix</a></p>
             <p class="site-link-sub"><a href="rfc4180.html">RFC 4180</a></p>
 
             <hr>
