Updated docs for release 0.3.2

--- a/release-notes.html
+++ b/release-notes.html
@@ -47,6 +47,11 @@
 
             <h1>Release notes</h1>
 
+            <h1>v0.3.2</h1>
+            <ul>
+                <li><b><a href="https://github.com/robert-bor/CSVeed/issues/38">Null values</a></b>; cell with empty values are stored as null values</li>
+            </ul>
+
             <h1>v0.3.1</h1>
             <ul>
                 <li><b><a href="https://github.com/robert-bor/CSVeed/issues/30">Locale-specific doubles</a></b>; attributes can be annotated for a specific locale, for example @CsvLocalizedNumber(language = "de", country="DE") for Germany, meaning that 29,81 is parsed as a double</li>
