Updated release notes

--- a/release-notes.html
+++ b/release-notes.html
@@ -47,6 +47,16 @@
 
             <h1>Release notes</h1>
 
+            <h1>v0.3.7</h1>
+            <ul>
+                <li><b><a href="https://github.com/robert-bor/CSVeed/issues/43">Check header before reading first non-header row</a></b>; </li>
+            </ul>
+
+            <h1>v0.3.5</h1>
+            <ul>
+                <li><b><a href="https://github.com/robert-bor/CSVeed/issues/41">Ability to deal with dynamic columns</a></b>; headers must be copyable to fields of a row and variable columns must be joinable with static columns</li>
+            </ul>
+
             <h1>v0.3.2</h1>
             <ul>
                 <li><b><a href="https://github.com/robert-bor/CSVeed/issues/38">Null values</a></b>; cell with empty values are stored as null values</li>
