Changed references to CsvReader to CsvClient

--- a/architecture.html
+++ b/architecture.html
@@ -75,7 +75,7 @@
 
             <p>Design goal: <em>a single Facade for interacting with the underlying layers, intuitive in usage and operation</em></p>
 
-            <p>CsvReader joins both BeanReader and LineReader, and their respective instructions classes in a single class. Developers making use of the Facade now only have to deal with one class to drive the process.</p>
+            <p>CsvClient joins both BeanReader and LineReader, and their respective instructions classes in a single class. Developers making use of the Facade now only have to deal with one class to drive the process.</p>
 
             <h2 id="bean">bean</h2>
 
