--- a/comparison.html
+++ b/comparison.html
@@ -94,7 +94,7 @@
 
             <h2 id="javacsv"><a href="http://sourceforge.net/projects/javacsv/">JavaCSV</a></h2>
 
-            <p>The first thing that is noteworthy about this library is that it has only two classes; CsvReader and CsvWriter. The ease of its interface is clamored and has been a huge incentive for me to add the Facade layer to CSVeed.</p>
+            <p>The first thing that is noteworthy about this library is that it has only two classes; CsvClient and CsvWriter. The ease of its interface is clamored and has been a huge incentive for me to add the Facade layer to CSVeed.</p>
 
             <p>The project has releases in Maven Central, although without source. The process lets you read a line one by one, there seems to be no way to get them all at once. There is no support for bean conversion. Documentation is somewhat poor since the website seems to have been used for another purpose as well.</p>
 
