--- a/release-notes.html
+++ b/release-notes.html
@@ -47,9 +47,19 @@
 
             <h1>Release notes</h1>
 
+            <h1>v0.4.0</h1>
+            <ul>
+                <li><b><a href="https://github.com/robert-bor/CSVeed/issues/42">CSV Writing</a></b>; ...</li>
+                <li><b><a href="https://github.com/robert-bor/CSVeed/issues/45">Converter.getType() is
+                    generic</a></b>; on implementing your own converters, you no longer need to declare @Override
+                    getType(). Instead you must make a call to the constructor of AbstractConverter,
+                    passing the class</li>
+            </ul>
+
+
             <h1>v0.3.7</h1>
             <ul>
-                <li><b><a href="https://github.com/robert-bor/CSVeed/issues/43">Check header before reading first non-header row</a></b>; </li>
+                <li><b><a href="https://github.com/robert-bor/CSVeed/issues/43">Check header before reading first non-header row</a></b></li>
             </ul>
 
             <h1>v0.3.5</h1>
