--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ CSV text value into a java.util.Date using the date format in the annotation.</p
                 <span class="s">"\"Gamma\";1902;\"30-09-1978\""</span>
         <span class="o">);</span>
         <span class="s"></span>
-        <span class="n">CsvReader</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;</span> <span class="n">csvReader</span> <span class="o">=</span> <span class="k">new</span> <span class="n">CsvReaderImpl</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;(</span><span class="n">reader</span><span class="o">,</span> <span class="n">Bean</span><span class="o">.</span><span class="na">class</span><span class="o">);</span>
+        <span class="n">CsvClient</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;</span> <span class="n">csvReader</span> <span class="o">=</span> <span class="k">new</span> <span class="n">CsvClientImpl</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;(</span><span class="n">reader</span><span class="o">,</span> <span class="n">Bean</span><span class="o">.</span><span class="na">class</span><span class="o">);</span>
         <span class="kd">final</span> <span class="n">List</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;</span> <span class="n">beans</span> <span class="o">=</span> <span class="n">csvReader</span><span class="o">.</span><span class="na">readBeans</span><span class="o">();</span>
         <span class="s"></span>
         <span class="k">for</span> <span class="o">(</span><span class="n">Bean</span> <span class="n">bean</span> <span class="o">:</span> <span class="n">beans</span><span class="o">)</span> <span class="o">{</span>
@@ -135,7 +135,7 @@ CSV text value into a java.util.Date using the date format in the annotation.</p
                 <span class="s">"\"Gamma\";1902;\"30-09-1978\""</span>
         <span class="o">);</span>
                 <span class="s"></span>
-        <span class="n">CsvReader</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;</span> <span class="n">csvReader</span> <span class="o">=</span> <span class="k">new</span> <span class="n">CsvReaderImpl</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;(</span><span class="n">reader</span><span class="o">,</span>
+        <span class="n">CsvClient</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;</span> <span class="n">csvReader</span> <span class="o">=</span> <span class="k">new</span> <span class="n">CsvClientImpl</span><span class="o">&lt;</span><span class="n">Bean</span><span class="o">&gt;(</span><span class="n">reader</span><span class="o">,</span>
                     <span class="k">new</span> <span class="n">BeanReaderInstructionsImpl</span><span class="o">(</span><span class="n">Bean</span><span class="o">.</span><span class="na">class</span><span class="o">))</span>
                 <span class="o">.</span><span class="na">setMapper</span><span class="o">(</span><span class="n">ColumnNameMapper</span><span class="o">.</span><span class="na">class</span><span class="o">)</span>
                 <span class="o">.</span><span class="na">mapColumnNameToProperty</span><span class="o">(</span><span class="s">"name"</span><span class="o">,</span> <span class="s">"name"</span><span class="o">)</span>
