Added release notes for v0.4.0, updated comparison matrix and design choices

--- a/comparison-matrix.html
+++ b/comparison-matrix.html
@@ -496,7 +496,7 @@
                     <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
-                    <td class="appraisal">no <a href="design-choices.html#writer"><img src="images/question-mark.png"/></a></td>
+                    <td class="appraisal">yes<a href="design-choices.html#writer"><img src="images/question-mark.png"/></a></td>
                 </tr>
             </tbody>
         </table>
