--- a/release-notes.html
+++ b/release-notes.html
@@ -49,7 +49,9 @@
 
             <h1>v0.4.0</h1>
             <ul>
-                <li><b><a href="https://github.com/robert-bor/CSVeed/issues/42">CSV Writing</a></b>; ...</li>
+                <li><b><a href="https://github.com/robert-bor/CSVeed/issues/42">CSV Writing</a></b>; the facade
+                    has been extended with the option to write rows and beans. Note: a big change is that CsvReader
+                    has been renamed to CsvClient to cater for both reading and writing requirements!</li>
                 <li><b><a href="https://github.com/robert-bor/CSVeed/issues/45">Converter.getType() is
                     generic</a></b>; on implementing your own converters, you no longer need to declare @Override
                     getType(). Instead you must make a call to the constructor of AbstractConverter,
