Updated last-updated information on CSV frameworks

--- a/comparison-matrix.html
+++ b/comparison-matrix.html
@@ -116,21 +116,22 @@
                     <td class="appraisal">3.1.1</td>
                     <td class="appraisal">2.0.0</td>
                     <td class="appraisal">2.3</td>
-                    <td class="appraisal">2.0.1</td>
+                    <td class="appraisal">2.2.0</td>
                     <td class="appraisal">1.4.0</td>
-                    <td class="appraisal">0.9.3</td>
-                    <td class="appraisal">0.2.2 <a href="design-choices.html#v1.0.0"><img src="images/question-mark.png"/></a></td>
+                    <td class="appraisal">1.0.0</td>
+                    <td class="appraisal">0.4.0 <a href="design-choices.html#v1.0.0"><img
+                            src="images/question-mark.png"/></a></td>
                 </tr>
                 <tr>
                     <td class="property">Last updated</td>
                     <td class="appraisal">30-Nov-2012</td>
                     <td class="appraisal">28-May-2008</td>
                     <td class="appraisal">20-Feb-2008</td>
-                    <td class="appraisal">28-Jul-2011</td>
-                    <td class="appraisal">8-Dec-2012</td>
+                    <td class="appraisal">28-May-2013</td>
+                    <td class="appraisal">24-Apr-2014</td>
                     <td class="appraisal">27-Feb-2012</td>
-                    <td class="appraisal">17-Nov-2010</td>
-                    <td class="appraisal">12-Mar-2013</td>
+                    <td class="appraisal">17-Oct-2013</td>
+                    <td class="appraisal">06-May-2014</td>
                 </tr>
             </tbody>
         </table>
