Change groupId back to org.csveed, replace all github links to 42bv
Since we're now on 42BV organisation, replaced all links from
`robert-bor` to `42BV`.

Changed groupId back to `org.csveed` since we are once again able to
release from our own groupId.

--- a/src/site/resources/comparison-matrix.html
+++ b/src/site/resources/comparison-matrix.html
@@ -37,7 +37,7 @@
         <h1>CSVeed</h1>
         <h2>Easy-to-use CSV to Java Bean utility</h2>
         <img class="csveed-logo" src="images/csveed-logo-white.png">
-        <a href="https://github.com/robert-bor/CSVeed" class="button"><small>View project on</small>GitHub</a>
+        <a href="https://github.com/42BV/CSVeed" class="button"><small>View project on</small>GitHub</a>
     </div>
 </header>
 
@@ -137,7 +137,7 @@
         </table>
 
         <h2>Tokenizer</h2>
-        
+
         <table class="comparison-matrix">
             <thead>
                 <tr>
@@ -598,7 +598,7 @@
                 </tr>
             </tbody>
         </table>
-        
+
         <h2>Quality of error feedback</h2>
 
         <table class="comparison-matrix">
