[site] Update parts of comparison matrix
- Correct websites
- correct maven central
- Correct sources section
- Correct versions
- Correct release dates

--- a/src/site/resources/comparison-matrix.html
+++ b/src/site/resources/comparison-matrix.html
@@ -67,20 +67,20 @@
             <thead>
                 <tr>
                     <td class="property"></td>
-                    <td class="library"><a href="http://commons.apache.org/sandbox/csv/">Commons CSV</a></td>
-                    <td class="library"><a href="http://flatpack.sourceforge.net/">Flatpack</a></td>
-                    <td class="library"><a href="http://sourceforge.net/projects/javacsv/">JavaCSV</a></td>
-                    <td class="library"><a href="http://opencsv.sourceforge.net/">opencsv</a></td>
-                    <td class="library"><a href="http://supercsv.sourceforge.net/">Super CSV</a></td>
-                    <td class="library"><a href="http://code.google.com/p/jcsv/">jcsv</a></td>
-                    <td class="library"><a href="http://jsefa.sourceforge.net/">JSefa</a></td>
-                    <td class="library"><a href="http://csveed.org">CSVeed</a></td>
+                    <td class="library"><a href="https://github.com/apache/commons-csv">Commons CSV</a></td>
+                    <td class="library"><a href="https://github.com/Appendium/flatpack">Flatpack</a></td>
+                    <td class="library"><a href="https://sourceforge.net/projects/javacsv/">JavaCSV</a></td>
+                    <td class="library"><a href="https://opencsv.sourceforge.net/">opencsv</a></td>
+                    <td class="library"><a href="https://github.com/super-csv/super-csv">Super CSV</a></td>
+                    <td class="library"><a href="https://code.google.com/archive/p/jcsv/">jcsv</a></td>
+                    <td class="library"><a href="https://jsefa.sourceforge.net/">JSefa</a></td>
+                    <td class="library"><a href="https://github.com/42BV/CSVeed/">CSVeed</a></td>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td class="property">Maven Central entry</td>
-                    <td class="appraisal">no</td>
+                    <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
@@ -91,13 +91,13 @@
                 </tr>
                 <tr>
                     <td class="property">Source in Maven</td>
-                    <td class="appraisal">N/A</td>
-                    <td class="appraisal">no</td>
+                    <td class="appraisal">yes</td>
+                    <td class="appraisal">yes</td>
                     <td class="appraisal">no</td>
                     <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
-                    <td class="appraisal">no</td>
+                    <td class="appraisal">yes</td>
                     <td class="appraisal">yes</td>
                 </tr>
                 <tr>
@@ -124,26 +124,26 @@
                 </tr>
                 <tr>
                     <td class="property">Version</td>
-                    <td class="appraisal">snapshot</td>
-                    <td class="appraisal">3.1.1</td>
-                    <td class="appraisal">2.0.0</td>
-                    <td class="appraisal">2.3</td>
+                    <td class="appraisal">1.10.0</td>
+                    <td class="appraisal">4.0.18</td>
+                    <td class="appraisal">2.0</td>
+                    <td class="appraisal">5.7.1</td>
                     <td class="appraisal">2.2.0</td>
                     <td class="appraisal">1.4.0</td>
-                    <td class="appraisal">1.0.0</td>
-                    <td class="appraisal">0.4.0 <a href="design-choices.html#v1.0.0"><img
+                    <td class="appraisal">1.1.1.RELEASE</td>
+                    <td class="appraisal">0.7.4 <a href="design-choices.html#v1.0.0"><img
                             src="images/question-mark.png"/></a></td>
                 </tr>
                 <tr>
                     <td class="property">Last updated</td>
-                    <td class="appraisal">30-Nov-2012</td>
-                    <td class="appraisal">28-May-2008</td>
+                    <td class="appraisal">23-May-2023</td>
+                    <td class="appraisal">27-Dec-2021</td>
                     <td class="appraisal">20-Feb-2008</td>
-                    <td class="appraisal">28-May-2013</td>
-                    <td class="appraisal">24-Apr-2014</td>
-                    <td class="appraisal">27-Feb-2012</td>
-                    <td class="appraisal">17-Oct-2013</td>
-                    <td class="appraisal">06-May-2014</td>
+                    <td class="appraisal">22-Oct-2022</td>
+                    <td class="appraisal">29-Oct-2015</td>
+                    <td class="appraisal">03-Feb-2012</td>
+                    <td class="appraisal">03-Oct-2014</td>
+                    <td class="appraisal">16-Jan-2023</td>
                 </tr>
             </tbody>
         </table>
