[site] Make release notes point to github since 0.7.0
not sure of history between 0.4.0 and 0.7.0 but could reconstruct it if needed.

--- a/src/site/resources/release-notes.html
+++ b/src/site/resources/release-notes.html
@@ -59,6 +59,11 @@
 
             <h1>Release notes</h1>
 
+            <h1>v0.7.0</h1>
+            <ul>
+                <li><b><a href="https://github.com/42BV/CSVeed/releases/">See github Releases since 0.7.0</a></b></li>
+            </ul>
+
             <h1>v0.4.0</h1>
             <ul>
                 <li><b><a href="https://github.com/42BV/CSVeed/issues/42">CSV Writing</a></b>; the facade
